--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -26,44 +27,52 @@
         <a href="./index.html" class="logo header__logo link" lang="en"
           >Web<span class="header__studio">Studio</span></a
         >
-        <nav class="navigation">
-          <ul class="menu-list list">
-            <li class="menu-list__item item">
-              <a href="./index.html" class="menu-list__link link current">Студия</a>
+        <button type="button">
+          <svg width="40" height="40">
+            <use href="./images/icons.svg#icon-open"></use>
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <div class="header-menu">
+          <nav class="navigation">
+            <ul class="menu-list list">
+              <li class="menu-list__item item">
+                <a href="./index.html" class="menu-list__link link current">Студия</a>
+              </li>
+
+              <li class="menu-list__item item">
+                <a href="./portfolio.html" class="menu-list__link link">Портфолио</a>
+              </li>
+
+              <li class="menu-list__item item">
+                <a href="" class="menu-list__link link">Контакты</a>
+              </li>
+            </ul>
+          </nav>
+          <ul class="address-list list">
+            <li class="address-list__item item">
+              <a href="mailto:info@devstudio.com" class="address-list__mailto link">
+                <svg class="address-list__icon" width="16" height="12">
+                  <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com</a
+              >
             </li>
 
-            <li class="menu-list__item item">
-              <a href="./portfolio.html" class="menu-list__link link">Портфолио</a>
-            </li>
-
-            <li class="menu-list__item item">
-              <a href="" class="menu-list__link link">Контакты</a>
+            <li class="address-list__item item">
+              <a href="tel:+380961111111" class="address-list__tel link"
+                ><svg class="address-list__icon" width="10" height="16">
+                  <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a
+              >
             </li>
           </ul>
-        </nav>
-        <ul class="address-list list">
-          <li class="address-list__item item">
-            <a href="mailto:info@devstudio.com" class="address-list__mailto link">
-              <svg class="address-list__icon" width="16" height="12">
-                <use href="./images/symbol-defs.svg#icon-envelope"></use>
-              </svg>
-              info@devstudio.com</a
-            >
-          </li>
-
-          <li class="address-list__item item">
-            <a href="tel:+380961111111" class="address-list__tel link"
-              ><svg class="address-list__icon" width="10" height="16">
-                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
-              </svg>
-              +38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+        </div>
       </div>
     </header>
 
-    <main>
+    <!-- <main>
       <section class="hero section">
         <div class="conteiner">
           <h1 class="hero__title test">Эффективные решения для вашего бизнеса</h1>
@@ -528,8 +537,8 @@
           <button class="services__send-button" type="submit">Отправить</button>
         </form>
       </div>
-    </div>
+    </div> -->
 
-    <script src="./js/modal.js"></script>
+    <!-- <script src="./js/modal.js"></script> -->
   </body>
 </html>
