--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
         <a href="./index.html" class="logo header__logo link" lang="en"
           >Web<span class="header__studio">Studio</span></a
         >
-        <button type="button">
-          <svg width="40" height="40">
+        <button class="menu-open-btn" type="button">
+          <svg class="menu-open-btn__icon" width="40" height="40">
             <use href="./images/icons.svg#icon-open"></use>
-            <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
         <div class="header-menu">
@@ -69,6 +68,64 @@
             </li>
           </ul>
         </div>
+      </div>
+      <div class="mob-menu">
+        <button class="menu-close-btn" type="button">
+          <svg class="menu-close-btn__icon" width="40" height="40">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <nav class="navigation">
+          <ul class="mob-menu-list list">
+            <li class="mob-menu-list__item item">
+              <a href="./index.html" class="mob-menu-list__link link current">Студия</a>
+            </li>
+
+            <li class="mob-menu-list__item item">
+              <a href="./portfolio.html" class="mob-menu-list__link link">Портфолио</a>
+            </li>
+
+            <li class="mob-menu-list__item item">
+              <a href="" class="mob-menu-list__link link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="mob-address-list list">
+          <li class="mob-address-list__item item">
+            <a href="mailto:info@devstudio.com" class="mob-address-list__mailto link">
+              <svg class="mob-address-list__icon" width="16" height="12">
+                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
+            >
+          </li>
+
+          <li class="mob-address-list__item item">
+            <a href="tel:+380961111111" class="mob-address-list__tel link"
+              ><svg class="mob-address-list__icon" width="10" height="16">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+        <ul class="mod-soc-list list">
+          <li class="mod-soc-list__list item">
+            <a class="mod-soc-list_link link" href="">Instagram</a>
+          </li>
+          <li class="mod-soc-list__list item"><span class="mod-soc-list__span">|</span></li>
+          <li class="mod-soc-list__list item">
+            <a class="mod-soc-list_link link" href="">Twitter</a>
+          </li>
+          <li class="mod-soc-list__list item"><span class="mod-soc-list__span">|</span></li>
+          <li class="mod-soc-list__list item">
+            <a class="mod-soc-list_link link" href="">Facebook</a>
+          </li>
+          <li class="mod-soc-list__list item"><span class="mod-soc-list__span">|</span></li>
+          <li class="mod-soc-list__list item">
+            <a class="mod-soc-list_link link" href="">LinkedIn</a>
+          </li>
+        </ul>
       </div>
     </header>
 
