--- a/index.html
+++ b/index.html
@@ -92,20 +92,12 @@
         </nav>
         <ul class="mob-address-list list">
           <li class="mob-address-list__item item">
-            <a href="mailto:info@devstudio.com" class="mob-address-list__mailto link">
-              <svg class="mob-address-list__icon" width="16" height="12">
-                <use href="./images/symbol-defs.svg#icon-envelope"></use>
-              </svg>
-              info@devstudio.com</a
-            >
+            <a href="tel:+380961111111" class="mob-address-list__tel link"> +38 096 111 11 11</a>
           </li>
 
           <li class="mob-address-list__item item">
-            <a href="tel:+380961111111" class="mob-address-list__tel link"
-              ><svg class="mob-address-list__icon" width="10" height="16">
-                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
-              </svg>
-              +38 096 111 11 11</a
+            <a href="mailto:info@devstudio.com" class="mob-address-list__mailto link">
+              info@devstudio.com</a
             >
           </li>
         </ul>
@@ -113,15 +105,15 @@
           <li class="mod-soc-list__list item">
             <a class="mod-soc-list_link link" href="">Instagram</a>
           </li>
-          <li class="mod-soc-list__list item"><span class="mod-soc-list__span">|</span></li>
+          <!-- <li class="mod-soc-list__list item"><span class="mod-soc-list__span">|</span></li> -->
           <li class="mod-soc-list__list item">
             <a class="mod-soc-list_link link" href="">Twitter</a>
           </li>
-          <li class="mod-soc-list__list item"><span class="mod-soc-list__span">|</span></li>
+          <!-- <li class="mod-soc-list__list item"><span class="mod-soc-list__span">|</span></li> -->
           <li class="mod-soc-list__list item">
             <a class="mod-soc-list_link link" href="">Facebook</a>
           </li>
-          <li class="mod-soc-list__list item"><span class="mod-soc-list__span">|</span></li>
+          <!-- <li class="mod-soc-list__list item"><span class="mod-soc-list__span">|</span></li> -->
           <li class="mod-soc-list__list item">
             <a class="mod-soc-list_link link" href="">LinkedIn</a>
           </li>
