--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </ul>
         </div>
       </div>
-      <div class="mob-menu">
+      <div class="mob-menu is-hidden">
         <button class="menu-close-btn" type="button">
           <svg class="menu-close-btn__icon" width="40" height="40">
             <use href="./images/icons.svg#icon-close"></use>
@@ -589,5 +589,6 @@
     </div> -->
 
     <!-- <script src="./js/modal.js"></script> -->
+    <script src="./js/menu.js"></script>
   </body>
 </html>
