--- a/index.html
+++ b/index.html
@@ -69,59 +69,59 @@
           </ul>
         </div>
       </div>
+
       <div class="mob-menu is-hidden">
-        <button class="menu-close-btn" type="button">
-          <svg class="menu-close-btn__icon" width="40" height="40">
-            <use href="./images/icons.svg#icon-close"></use>
-          </svg>
-        </button>
-        <nav class="navigation">
-          <ul class="mob-menu-list list">
-            <li class="mob-menu-list__item item">
-              <a href="./index.html" class="mob-menu-list__link link current">Студия</a>
+        <div class="group">
+          <button class="menu-close-btn" type="button">
+            <svg class="menu-close-btn__icon" width="40" height="40">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+          <nav class="navigation">
+            <ul class="mob-menu-list list">
+              <li class="mob-menu-list__item item">
+                <a href="./index.html" class="mob-menu-list__link link current">Студия</a>
+              </li>
+
+              <li class="mob-menu-list__item item">
+                <a href="./portfolio.html" class="mob-menu-list__link link">Портфолио</a>
+              </li>
+
+              <li class="mob-menu-list__item item">
+                <a href="" class="mob-menu-list__link link">Контакты</a>
+              </li>
+            </ul>
+          </nav>
+          <ul class="mob-address-list list">
+            <li class="mob-address-list__item item">
+              <a href="tel:+380961111111" class="mob-address-list__tel link"> +38 096 111 11 11</a>
             </li>
 
-            <li class="mob-menu-list__item item">
-              <a href="./portfolio.html" class="mob-menu-list__link link">Портфолио</a>
-            </li>
-
-            <li class="mob-menu-list__item item">
-              <a href="" class="mob-menu-list__link link">Контакты</a>
+            <li class="mob-address-list__item item">
+              <a href="mailto:info@devstudio.com" class="mob-address-list__mailto link">
+                info@devstudio.com</a
+              >
             </li>
           </ul>
-        </nav>
-        <ul class="mob-address-list list">
-          <li class="mob-address-list__item item">
-            <a href="tel:+380961111111" class="mob-address-list__tel link"> +38 096 111 11 11</a>
-          </li>
-
-          <li class="mob-address-list__item item">
-            <a href="mailto:info@devstudio.com" class="mob-address-list__mailto link">
-              info@devstudio.com</a
-            >
-          </li>
-        </ul>
-        <ul class="mod-soc-list list">
-          <li class="mod-soc-list__list item">
-            <a class="mod-soc-list_link link" href="">Instagram</a>
-          </li>
-          <!-- <li class="mod-soc-list__list item"><span class="mod-soc-list__span">|</span></li> -->
-          <li class="mod-soc-list__list item">
-            <a class="mod-soc-list_link link" href="">Twitter</a>
-          </li>
-          <!-- <li class="mod-soc-list__list item"><span class="mod-soc-list__span">|</span></li> -->
-          <li class="mod-soc-list__list item">
-            <a class="mod-soc-list_link link" href="">Facebook</a>
-          </li>
-          <!-- <li class="mod-soc-list__list item"><span class="mod-soc-list__span">|</span></li> -->
-          <li class="mod-soc-list__list item">
-            <a class="mod-soc-list_link link" href="">LinkedIn</a>
-          </li>
-        </ul>
+          <ul class="mod-soc-list list">
+            <li class="mod-soc-list__list item">
+              <a class="mod-soc-list_link link" href="">Instagram</a>
+            </li>
+            <li class="mod-soc-list__list item">
+              <a class="mod-soc-list_link link" href="">Twitter</a>
+            </li>
+            <li class="mod-soc-list__list item">
+              <a class="mod-soc-list_link link" href="">Facebook</a>
+            </li>
+            <li class="mod-soc-list__list item">
+              <a class="mod-soc-list_link link" href="">LinkedIn</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
 
-    <!-- <main>
+    <main>
       <section class="hero section">
         <div class="conteiner">
           <h1 class="hero__title test">Эффективные решения для вашего бизнеса</h1>
@@ -129,7 +129,7 @@
         </div>
       </section>
 
-      <section class="features section">
+      <!-- <section class="features section">
         <div class="conteiner">
           <h2 class="visually-hidden">Наши преимущества</h2>
           <ul class="advantages-list list">
@@ -431,10 +431,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="conteiner">
         <div class="footer__logo-address">
           <a href="./index.html" class="logo footer__logo link" lang="en"
@@ -520,7 +520,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
@@ -586,9 +586,9 @@
           <button class="services__send-button" type="submit">Отправить</button>
         </form>
       </div>
-    </div> -->
+    </div>
 
-    <!-- <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
     <script src="./js/menu.js"></script>
   </body>
 </html>
