--- a/index.html
+++ b/index.html
@@ -92,31 +92,36 @@
               </li>
             </ul>
           </nav>
-          <ul class="mob-address-list list">
-            <li class="mob-address-list__item item">
-              <a href="tel:+380961111111" class="mob-address-list__tel link"> +38 096 111 11 11</a>
-            </li>
 
-            <li class="mob-address-list__item item">
-              <a href="mailto:info@devstudio.com" class="mob-address-list__mailto link">
-                info@devstudio.com</a
-              >
-            </li>
-          </ul>
-          <ul class="mod-soc-list list">
-            <li class="mod-soc-list__list item">
-              <a class="mod-soc-list_link link" href="">Instagram</a>
-            </li>
-            <li class="mod-soc-list__list item">
-              <a class="mod-soc-list_link link" href="">Twitter</a>
-            </li>
-            <li class="mod-soc-list__list item">
-              <a class="mod-soc-list_link link" href="">Facebook</a>
-            </li>
-            <li class="mod-soc-list__list item">
-              <a class="mod-soc-list_link link" href="">LinkedIn</a>
-            </li>
-          </ul>
+          <div class="contacts">
+            <ul class="mob-address-list list">
+              <li class="mob-address-list__item item">
+                <a href="tel:+380961111111" class="mob-address-list__tel link">
+                  +38 096 111 11 11</a
+                >
+              </li>
+
+              <li class="mob-address-list__item item">
+                <a href="mailto:info@devstudio.com" class="mob-address-list__mailto link">
+                  info@devstudio.com</a
+                >
+              </li>
+            </ul>
+            <ul class="mod-soc-list list">
+              <li class="mod-soc-list__list item">
+                <a class="mod-soc-list_link link" href="">Instagram</a>
+              </li>
+              <li class="mod-soc-list__list item">
+                <a class="mod-soc-list_link link" href="">Twitter</a>
+              </li>
+              <li class="mod-soc-list__list item">
+                <a class="mod-soc-list_link link" href="">Facebook</a>
+              </li>
+              <li class="mod-soc-list__list item">
+                <a class="mod-soc-list_link link" href="">LinkedIn</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </header>
