--- a/index.html
+++ b/index.html
@@ -77,50 +77,52 @@
               <use href="./images/icons.svg#icon-close"></use>
             </svg>
           </button>
-          <nav class="navigation">
-            <ul class="mob-menu-list list">
-              <li class="mob-menu-list__item item">
-                <a href="./index.html" class="mob-menu-list__link link current">Студия</a>
-              </li>
+          <div class="navigation-contacts">
+            <nav class="navigation">
+              <ul class="mob-menu-list list">
+                <li class="mob-menu-list__item item">
+                  <a href="./index.html" class="mob-menu-list__link link current">Студия</a>
+                </li>
 
-              <li class="mob-menu-list__item item">
-                <a href="./portfolio.html" class="mob-menu-list__link link">Портфолио</a>
-              </li>
+                <li class="mob-menu-list__item item">
+                  <a href="./portfolio.html" class="mob-menu-list__link link">Портфолио</a>
+                </li>
 
-              <li class="mob-menu-list__item item">
-                <a href="" class="mob-menu-list__link link">Контакты</a>
-              </li>
-            </ul>
-          </nav>
+                <li class="mob-menu-list__item item">
+                  <a href="" class="mob-menu-list__link link">Контакты</a>
+                </li>
+              </ul>
+            </nav>
 
-          <div class="contacts">
-            <ul class="mob-address-list list">
-              <li class="mob-address-list__item item">
-                <a href="tel:+380961111111" class="mob-address-list__tel link">
-                  +38 096 111 11 11</a
-                >
-              </li>
+            <div class="contacts">
+              <ul class="mob-address-list list">
+                <li class="mob-address-list__item item">
+                  <a href="tel:+380961111111" class="mob-address-list__tel link">
+                    +38 096 111 11 11</a
+                  >
+                </li>
 
-              <li class="mob-address-list__item item">
-                <a href="mailto:info@devstudio.com" class="mob-address-list__mailto link">
-                  info@devstudio.com</a
-                >
-              </li>
-            </ul>
-            <ul class="mod-soc-list list">
-              <li class="mod-soc-list__list item">
-                <a class="mod-soc-list_link link" href="">Instagram</a>
-              </li>
-              <li class="mod-soc-list__list item">
-                <a class="mod-soc-list_link link" href="">Twitter</a>
-              </li>
-              <li class="mod-soc-list__list item">
-                <a class="mod-soc-list_link link" href="">Facebook</a>
-              </li>
-              <li class="mod-soc-list__list item">
-                <a class="mod-soc-list_link link" href="">LinkedIn</a>
-              </li>
-            </ul>
+                <li class="mob-address-list__item item">
+                  <a href="mailto:info@devstudio.com" class="mob-address-list__mailto link">
+                    info@devstudio.com</a
+                  >
+                </li>
+              </ul>
+              <ul class="mod-soc-list list">
+                <li class="mod-soc-list__list item">
+                  <a class="mod-soc-list_link link" href="">Instagram</a>
+                </li>
+                <li class="mod-soc-list__list item">
+                  <a class="mod-soc-list_link link" href="">Twitter</a>
+                </li>
+                <li class="mod-soc-list__list item">
+                  <a class="mod-soc-list_link link" href="">Facebook</a>
+                </li>
+                <li class="mod-soc-list__list item">
+                  <a class="mod-soc-list_link link" href="">LinkedIn</a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
