--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
       </section>
 
-      <!-- <section class="features section">
+      <section class="features section">
         <div class="conteiner">
           <h2 class="visually-hidden">Наши преимущества</h2>
           <ul class="advantages-list list">
@@ -191,7 +191,7 @@
         </div>
       </section>
 
-      <section class="occupation section">
+      <!-- <section class="occupation section">
         <div class="conteiner">
           <h2 class="occupation__title title">Чем мы занимаемся</h2>
           <ul class="occupation__list list">
