--- a/index.html
+++ b/index.html
@@ -224,7 +224,34 @@
           <h2 class="team__title title">Наша команда</h2>
           <ul class="person-list list">
             <li class="person-list__item item">
-              <img
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/team-desk/team-desk@1-1.jpg 270w,
+                    ./images/team/team-desk/team-desk@2-1.jpg 540w
+                  "
+                  media="(min-width: 1200px)"
+                  sizes="270px"
+                />
+                <source
+                  srcset="
+                    ./images/team/team-tab/team-tab@1-1.jpg 354w,
+                    ./images/team/team-tab/team-tab@2-1.jpg 708w
+                  "
+                  media="(min-width: 768px)"
+                  sizes="354px"
+                />
+                <source
+                  srcset="
+                    ./images/team/team-mob/team-mob@1-1.jpg 450w,
+                    ./images/team/team-mob/team-mob@2-1.jpg 900w
+                  "
+                  media="(min-width: 480px)"
+                  sizes="450px"
+                />
+                <img src="./images/team/team-mob/team-mob@1-1.jpg" alt="Член команды" />
+              </picture>
+              <!-- <img
                 srcset="
                   ./images/team/team-mob/team-mob@1-1.jpg   450w,
                   ./images/team/team-mob/team-mob@2-1.jpg   900w,
@@ -237,7 +264,7 @@
                 src="./images/img4.jpg"
                 alt="Член команды"
                 class="team-img"
-              />
+              /> -->
               <div class="person-list__div">
                 <h3 class="person-list__name title">Игорь Демьяненко</h3>
                 <p class="person-list__text text" lang="en">Product Designer</p>
@@ -278,7 +305,33 @@
             </li>
 
             <li class="person-list__item item">
-              <img src="./images/img5.jpg" alt="Член команды" width="270" class="team-img" />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/team-desk/team-desk@1-2.jpg 270w,
+                    ./images/team/team-desk/team-desk@2-2.jpg 540w
+                  "
+                  media="(min-width: 1200px)"
+                  sizes="270px"
+                />
+                <source
+                  srcset="
+                    ./images/team/team-tab/team-tab@1-2.jpg 354w,
+                    ./images/team/team-tab/team-tab@2-2.jpg 708w
+                  "
+                  media="(min-width: 768px)"
+                  sizes="354px"
+                />
+                <source
+                  srcset="
+                    ./images/team/team-mob/team-mob@1-2.jpg 450w,
+                    ./images/team/team-mob/team-mob@2-2.jpg 900w
+                  "
+                  media="(min-width: 480px)"
+                  sizes="450px"
+                />
+                <img src="./images/team/team-mob/team-mob@1-2.jpg" alt="Член команды" />
+              </picture>
               <div class="person-list__div">
                 <h3 class="person-list__name title">Ольга Репина</h3>
                 <p class="person-list__text text" lang="en">Frontend Developer</p>
@@ -319,7 +372,33 @@
             </li>
 
             <li class="person-list__item item">
-              <img src="./images/img6.jpg" alt="Член команды" width="270" class="team-img" />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/team-desk/team-desk@1-3.jpg 270w,
+                    ./images/team/team-desk/team-desk@2-3.jpg 540w
+                  "
+                  media="(min-width: 1200px)"
+                  sizes="270px"
+                />
+                <source
+                  srcset="
+                    ./images/team/team-tab/team-tab@1-3.jpg 354w,
+                    ./images/team/team-tab/team-tab@2-3.jpg 708w
+                  "
+                  media="(min-width: 768px)"
+                  sizes="354px"
+                />
+                <source
+                  srcset="
+                    ./images/team/team-mob/team-mob@1-3.jpg 450w,
+                    ./images/team/team-mob/team-mob@2-3.jpg 900w
+                  "
+                  media="(min-width: 480px)"
+                  sizes="450px"
+                />
+                <img src="./images/team/team-mob/team-mob@1-3.jpg" alt="Член команды" />
+              </picture>
               <div class="person-list__div">
                 <h3 class="person-list__name title">Николай Тарасов</h3>
                 <p class="person-list__text text" lang="en">Marketing</p>
@@ -360,7 +439,33 @@
             </li>
 
             <li class="person-list__item item">
-              <img src="./images/img7.jpg" alt="Член команды" width="270" class="team-img" />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/team-desk/team-desk@1-4.jpg 270w,
+                    ./images/team/team-desk/team-desk@2-4.jpg 540w
+                  "
+                  media="(min-width: 1200px)"
+                  sizes="270px"
+                />
+                <source
+                  srcset="
+                    ./images/team/team-tab/team-tab@1-4.jpg 354w,
+                    ./images/team/team-tab/team-tab@2-4.jpg 708w
+                  "
+                  media="(min-width: 768px)"
+                  sizes="354px"
+                />
+                <source
+                  srcset="
+                    ./images/team/team-mob/team-mob@1-4.jpg 450w,
+                    ./images/team/team-mob/team-mob@2-4.jpg 900w
+                  "
+                  media="(min-width: 480px)"
+                  sizes="450px"
+                />
+                <img src="./images/team/team-mob/team-mob@1-4.jpg" alt="Член команды" />
+              </picture>
               <div class="person-list__div">
                 <h3 class="person-list__name title">Михаил Ермаков</h3>
                 <p class="person-list__text text" lang="en">UI Designer</p>
