--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
         </div>
       </section>
 
-      <!-- <section class="company section">
+      <section class="company section">
         <div class="conteiner">
           <h2 class="company__title title">Постоянные клиенты</h2>
           <ul class="logo-company-list list">
@@ -556,7 +556,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- <footer class="footer">
