--- a/index.html
+++ b/index.html
@@ -559,71 +559,75 @@
       </section>
     </main>
 
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="conteiner">
-        <div class="footer__logo-address">
-          <a href="./index.html" class="logo footer__logo link" lang="en"
-            >Web<span class="footer__studio">Studio</span>
-          </a>
+        <div class="footer-logo-address-soc">
+          <div class="footer__logo-address">
+            <a href="./index.html" class="logo footer__logo link" lang="en"
+              >Web<span class="footer__studio">Studio</span>
+            </a>
 
-          <address class="address">
-            <ul class="address__list list">
-              <li class="address__item item">
-                <a
-                  href="https://goo.gl/maps/kYSissehmQPuU9YA6"
-                  class="address__maps link"
-                  target="_blank"
-                  rel="noopener noindex nofollow"
-                  >г. Киев, пр-т Леси Украинки, 26</a
-                >
+            <address class="address">
+              <ul class="address__list list">
+                <li class="address__item item">
+                  <a
+                    href="https://goo.gl/maps/kYSissehmQPuU9YA6"
+                    class="address__maps link"
+                    target="_blank"
+                    rel="noopener noindex nofollow"
+                    >г. Киев, пр-т Леси Украинки, 26</a
+                  >
+                </li>
+
+                <li class="address__item item">
+                  <a href="mailto:info@example.com" class="address__mailto link"
+                    >info@example.com</a
+                  >
+                </li>
+
+                <li class="address__item item">
+                  <a href="+380991111111" class="address__tel link">+38 099 111 11 11</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+
+          <div class="footer-soc">
+            <h2 class="footer-soc__title title">присоединяйтесь</h2>
+            <ul class="footer-soc__list list">
+              <li class="footer-soc__item">
+                <a href="" class="footer-soc__link link">
+                  <svg class="footer-soc__icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
 
-              <li class="address__item item">
-                <a href="mailto:info@example.com" class="address__mailto link">info@example.com</a>
+              <li class="footer-soc__item">
+                <a href="" class="footer-soc__link link">
+                  <svg class="footer-soc__icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-Group"></use>
+                  </svg>
+                </a>
               </li>
 
-              <li class="address__item item">
-                <a href="+380991111111" class="address__tel link">+38 099 111 11 11</a>
+              <li class="footer-soc__item">
+                <a href="" class="footer-soc__link link">
+                  <svg class="footer-soc__icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="footer-soc__item">
+                <a href="" class="footer-soc__link link">
+                  <svg class="footer-soc__icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
-        </div>
-
-        <div class="footer-soc">
-          <h2 class="footer-soc__title title">присоединяйтесь</h2>
-          <ul class="footer-soc__list list">
-            <li class="footer-soc__item">
-              <a href="" class="footer-soc__link link">
-                <svg class="footer-soc__icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-
-            <li class="footer-soc__item">
-              <a href="" class="footer-soc__link link">
-                <svg class="footer-soc__icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-Group"></use>
-                </svg>
-              </a>
-            </li>
-
-            <li class="footer-soc__item">
-              <a href="" class="footer-soc__link link">
-                <svg class="footer-soc__icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-
-            <li class="footer-soc__item">
-              <a href="" class="footer-soc__link link">
-                <svg class="footer-soc__icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          </div>
         </div>
         <div class="footer-subscribe">
           <h2 class="footer-subscribe__title title">Подпишитесь на рассылку</h2>
@@ -645,7 +649,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
