--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,7 +21,7 @@
     <link rel="stylesheet" href="./css/portfolio.min.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="conteiner">
         <a href="./index.html" class="logo header__logo link" lang="en"
           >Web<span class="header__studio">Studio</span></a
@@ -61,6 +60,112 @@
             >
           </li>
         </ul>
+      </div>
+    </header> -->
+
+    <header class="header">
+      <div class="conteiner">
+        <a href="./index.html" class="logo header__logo link" lang="en"
+          >Web<span class="header__studio">Studio</span></a
+        >
+        <button class="menu-open-btn" type="button">
+          <svg class="menu-open-btn__icon" width="40" height="40">
+            <use href="./images/icons.svg#icon-open"></use>
+          </svg>
+        </button>
+        <div class="header-menu">
+          <nav class="navigation">
+            <ul class="menu-list list">
+              <li class="menu-list__item item">
+                <a href="./index.html" class="menu-list__link link current">Студия</a>
+              </li>
+
+              <li class="menu-list__item item">
+                <a href="./portfolio.html" class="menu-list__link link">Портфолио</a>
+              </li>
+
+              <li class="menu-list__item item">
+                <a href="" class="menu-list__link link">Контакты</a>
+              </li>
+            </ul>
+          </nav>
+          <ul class="address-list list">
+            <li class="address-list__item item">
+              <a href="mailto:info@devstudio.com" class="address-list__mailto link">
+                <svg class="address-list__icon" width="16" height="12">
+                  <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com</a
+              >
+            </li>
+
+            <li class="address-list__item item">
+              <a href="tel:+380961111111" class="address-list__tel link"
+                ><svg class="address-list__icon" width="10" height="16">
+                  <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="mob-menu is-hidden">
+        <div class="group">
+          <button class="menu-close-btn" type="button">
+            <svg class="menu-close-btn__icon" width="40" height="40">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+          <div class="navigation-contacts">
+            <nav class="navigation">
+              <ul class="mob-menu-list list">
+                <li class="mob-menu-list__item item">
+                  <a href="./index.html" class="mob-menu-list__link link current">Студия</a>
+                </li>
+
+                <li class="mob-menu-list__item item">
+                  <a href="./portfolio.html" class="mob-menu-list__link link">Портфолио</a>
+                </li>
+
+                <li class="mob-menu-list__item item">
+                  <a href="" class="mob-menu-list__link link">Контакты</a>
+                </li>
+              </ul>
+            </nav>
+
+            <div class="contacts">
+              <ul class="mob-address-list list">
+                <li class="mob-address-list__item item">
+                  <a href="tel:+380961111111" class="mob-address-list__tel link">
+                    +38 096 111 11 11</a
+                  >
+                </li>
+
+                <li class="mob-address-list__item item">
+                  <a href="mailto:info@devstudio.com" class="mob-address-list__mailto link">
+                    info@devstudio.com</a
+                  >
+                </li>
+              </ul>
+              <ul class="mod-soc-list list">
+                <li class="mod-soc-list__list item">
+                  <a class="mod-soc-list_link link" href="">Instagram</a>
+                </li>
+                <li class="mod-soc-list__list item">
+                  <a class="mod-soc-list_link link" href="">Twitter</a>
+                </li>
+                <li class="mod-soc-list__list item">
+                  <a class="mod-soc-list_link link" href="">Facebook</a>
+                </li>
+                <li class="mod-soc-list__list item">
+                  <a class="mod-soc-list_link link" href="">LinkedIn</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </header>
 
