--- a/index.html
+++ b/index.html
@@ -514,42 +514,42 @@
             <li class="logo-company-list__item">
               <a href="" class="logo-company-list__link link">
                 <svg class="logo-company-list__icon">
-                  <use href="./images/symbol-defs.svg#icon-Logo"></use>
+                  <use href="./images/symbol-defs.svg#icon-logo-company-1"></use>
                 </svg>
               </a>
             </li>
             <li class="logo-company-list__item">
               <a href="" class="logo-company-list__link link">
                 <svg class="logo-company-list__icon">
-                  <use href="./images/symbol-defs.svg#icon-Logo-1"></use>
+                  <use href="./images/symbol-defs.svg#icon-logo-company-2"></use>
                 </svg>
               </a>
             </li>
             <li class="logo-company-list__item">
               <a href="" class="logo-company-list__link link">
                 <svg class="logo-company-list__icon">
-                  <use href="./images/symbol-defs.svg#icon-Logo-2"></use>
+                  <use href="./images/symbol-defs.svg#icon-logo-company-3"></use>
                 </svg>
               </a>
             </li>
             <li class="logo-company-list__item">
               <a href="" class="logo-company-list__link link">
                 <svg class="logo-company-list__icon">
-                  <use href="./images/symbol-defs.svg#icon-Logo-3"></use>
+                  <use href="./images/symbol-defs.svg#icon-logo-company-4"></use>
                 </svg>
               </a>
             </li>
             <li class="logo-company-list__item">
               <a href="" class="logo-company-list__link link">
                 <svg class="logo-company-list__icon">
-                  <use href="./images/symbol-defs.svg#icon-Logo-4"></use>
+                  <use href="./images/symbol-defs.svg#icon-logo-company-5"></use>
                 </svg>
               </a>
             </li>
             <li class="logo-company-list__item">
               <a href="" class="logo-company-list__link link">
                 <svg class="logo-company-list__icon">
-                  <use href="./images/symbol-defs.svg#icon-Logo-5"></use>
+                  <use href="./images/symbol-defs.svg#icon-logo-company-6"></use>
                 </svg>
               </a>
             </li>
