--- a/portfolio.html
+++ b/portfolio.html
@@ -77,11 +77,11 @@
           <nav class="navigation">
             <ul class="menu-list list">
               <li class="menu-list__item item">
-                <a href="./index.html" class="menu-list__link link current">Студия</a>
+                <a href="./index.html" class="menu-list__link link">Студия</a>
               </li>
 
               <li class="menu-list__item item">
-                <a href="./portfolio.html" class="menu-list__link link">Портфолио</a>
+                <a href="./portfolio.html" class="menu-list__link link current">Портфолио</a>
               </li>
 
               <li class="menu-list__item item">
@@ -122,11 +122,11 @@
             <nav class="navigation">
               <ul class="mob-menu-list list">
                 <li class="mob-menu-list__item item">
-                  <a href="./index.html" class="mob-menu-list__link link current">Студия</a>
+                  <a href="./index.html" class="mob-menu-list__link link">Студия</a>
                 </li>
 
                 <li class="mob-menu-list__item item">
-                  <a href="./portfolio.html" class="mob-menu-list__link link">Портфолио</a>
+                  <a href="./portfolio.html" class="mob-menu-list__link link current">Портфолио</a>
                 </li>
 
                 <li class="mob-menu-list__item item">
