--- a/index.html
+++ b/index.html
@@ -196,21 +196,45 @@
           <ul class="occupation__list list">
             <li class="occupation__item item">
               <div class="occupation__thumb">
-                <img src="./images/img1.jpg" alt="Програмирование" width="370" />
+                <img
+                  srcset="
+                    ./images/occupation/occupation@1-1.jpg 370w,
+                    ./images/occupation/occupation@2-1.jpg 740w
+                  "
+                  sizes="370px"
+                  src="./images/occupation/occupation@1-1.jpg"
+                  alt="Програмирование"
+                />
                 <p class="occupation__top-text text">Десктопные приложения</p>
               </div>
             </li>
 
             <li class="occupation__item item">
               <div class="occupation__thumb">
-                <img src="./images/img2.jpg" alt="Мобильный сайт" width="370" />
+                <img
+                  srcset="
+                    ./images/occupation/occupation@1-2.jpg 370w,
+                    ./images/occupation/occupation@2-2.jpg 740w
+                  "
+                  sizes="370px"
+                  src="./images/occupation/occupation@1-2.jpg"
+                  alt="Мобильный сайт"
+                />
                 <p class="occupation__top-text text">Мобильные приложения</p>
               </div>
             </li>
 
             <li class="occupation__item item">
               <div class="occupation__thumb">
-                <img src="./images/img3.jpg" alt="Палитра цветов" width="370" />
+                <img
+                  srcset="
+                    ./images/occupation/occupation@1-3.jpg 370w,
+                    ./images/occupation/occupation@2-3.jpg 740w
+                  "
+                  sizes="370px"
+                  src="./images/occupation/occupation@1-3.jpg"
+                  alt="Палитра цветов"
+                />
                 <p class="occupation__top-text text">Дизайнерские решения</p>
               </div>
             </li>
